# facturas_xml

./: LICENSE  MANIFEST.in  README.md  examples.py  pyproject.toml  setup.py
facturas_xml/: __init__.py  consts.py  file_manager.py  xml_manager.py  xml_manager_legacy.py
